Remove max height on logos to prevent the stretch.

--- a/src/style.scss
+++ b/src/style.scss
@@ -919,6 +919,10 @@ article {
 
 	.wcorg-sponsor-level-boxes {
 		padding-bottom: 20px;
+
+		img {
+			max-height: none;
+		}
 	}
 }
 
